update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Gun-play_74150
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74150-h/images/cover.jpg
 creator:
   author:
     agent_name: Phillips, Michael J.
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '57367'
     url: http://www.gutenberg.org/2009/agents/57367
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74150#Gun-play
 gutenberg_issued: '2024-07-29'
 gutenberg_type: Text
 identifiers:
